# heylookitsanllm

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  MACOS_PERFORMANCE.md  PRODUCT.md  README.md  analytics_config.json  analyze_logs.py  detect-gpu.ps1  models.toml.example  models.yaml  models.yaml.example  pyproject.toml  pytest.ini  requirements-min.txt  requirements-performance.txt  requirements.txt  setup.bat  setup.ps1  setup.sh  setup_analytics.py  setup_logging.py  start_with_logging.py  unified_server.py  update-heylook.ps1  update-heylook.sh  update-packages.sh
apps/HeylookAnalytics/: .watchmanconfig  App.tsx  README.md  app.json  metro.config.js  package-lock.json  package.json
apps/HeylookAnalytics-Web/: package-lock.json  package.json
apps/batch-labeler/: README.md  pyproject.toml
apps/batch-labeler/src/batch_labeler/: __init__.py  cli.py  client.py  scanner.py  storage.py  tasks.py
apps/batch-labeler/tests/: test_cli.py  test_client.py  test_scanner.py  test_storage.py  test_tasks.py
apps/heylook-frontend/: .env.example  ARCHITECTURE.md  FEATURES.md  README.md  TECH_SPECS.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
apps/heylook-frontend-v2/: CLAUDE.md  index.html
apps/heylook-frontend-v3/: DESIGN.md  index.html
apps/optloop/: README.md  bench_config.toml  program.md
apps/optloop-lib/: AGENTS.md  CLAUDE.md  bench_config.toml  program.md  pyproject.toml
apps/optloop-lib/scripts/: bench_analysis.py  bench_common.py  bench_text.py  bench_vlm.py
apps/optloop-lib/tests/: test_bench_common.py
data/: .gitkeep
docs/: DOCS_AUDIT.md  FRONTEND_HANDOFF.md  README.md  SERVICE_SECURITY.md  WINDOWS.md  frontend_api_reference.md  frontend_v3.md  frontend_v3_spec.md  jspace_guide.md  jspace_integration_plan.md  jspace_visualizer_handoff.md  lan_setup.md  mlx_conversion_guide.md  mlx_optimization_plan.md  observability_guide.md  openapi.json  optimization_log.md  optloop_advanced.md  optloop_guide.md  parser_strip_unification.md  rlm_advanced.md  rlm_guide.md
docs/architecture/: README.md  api.md  config.md  ecosystem_strategy.md  mlx_embedding.md  mlx_provider.md  overview.md  router.md
docs/project/: CURRENT.md  TODO.md  plan_2026-07.md
examples/: ab_test_dashboard.tsx  api_selection_examples.py  batch_processing_example.py  comfyui_duckdb_node.py  multi_image_client.py  shrug_batch_response_parser.py  shrug_prompter_batch_updated.py  shrug_prompter_batched.py  shrug_prompter_duckdb.py  shrug_prompter_with_batch.py
guides/: LLAMA_CPP_PROVIDER.md  README.md
profiles/: embedding.toml  high_throughput.toml  low_resource.toml  moderate.toml  quantized_kv.toml  tight_fast.toml  wide_sampling.toml  widest_sampling.toml
scripts/: bench_analysis.py  bench_common.py  bench_text.py  bench_vlm.py  benchmark.py  check_openapi_sync.sh  dev_server.sh  export_openapi.py  jspace_convert_lens.py  metrics_dashboard.py  optloop.md  syntax_check.py
services/: com.heylookllm.server.plist.template  heylookllm.service.template
src/: api.py  config.py  router.py  server.py  utils.py
src/edge_llm/: api.py  config.py  router.py  server.py  utils.py
src/heylook_llm/: __init__.py  admin_api.py  analytics_config.py  api.py  api_batch.py  api_capabilities.py  api_multipart.py  auth.py  batch_extensions.py  batch_processor.py  batch_vision_pipeline.py  config.py  config_api.py  config_migration.py  config_tui.py  conversation_api.py  data_endpoint.py  data_loader.py  db.py  diagnostic_logger.py  embeddings.py  hidden_states.py  jspace_api.py  logprobs.py  memory.py  messages_api.py  metrics_db.py  metrics_db_wrapper.py  model_importer.py  model_service.py  notebook_api.py  observability.py  openapi_enhancements.py  openapi_examples.py  perf_collector.py  preset_api.py  presets.py  queue_manager.py  reasoning_parser.py  rlm.py  (+12 more)
src/providers/: llama_cpp_provider.py  mlx_provider.py
templates/: Mistral-Small-3.2-24B-Instruct-2506.jinja2  gpt-oss.jinja2
tests/: README.md  cli.py  cli_test_api.py  config_test.py  conftest.py  debug_api.py  debug_basics.py  debug_image.py  debug_model_weights.py  debug_router.py  debug_test.py  debug_vlm.py  model_path_validation.py  network_test.py  pytest.ini  run_tests.sh  test_api.py  test_api_integration.py  test_api_quick.py  test_concurrent_gguf.py  test_gemma3n_fix.py  test_mlx_optimization.py  test_mlx_simple.py  test_mutex_simple.py  test_new_endpoints.py  test_ollama.py  test_ollama_integration.py  test_optimizations_unit.py  test_parallel_stress.py  test_phase2_features.py  test_queue_integration.py  test_resilient_loader.py  test_router.py  test_runner.py  test_server_connectivity.py  test_simplified_loading.py  tests.txt  validate_optimizations.py
tests/contract/: conftest.py  test_admin.py  test_batch_vision_api.py  test_capabilities.py  test_chat_completions.py  test_frontend_mounts.py  test_generation_errors.py  test_jspace_api.py  test_messages.py  test_mlxvlm_surface.py  test_models_endpoint.py  test_openapi_conformance.py
tests/e2e/: .gitignore  README.md  package.json  run.mjs
tests/eval/: README.md  judges.py  run.py  tasks.py
tests/helpers/: mlx_mock.py
tests/integration/: test_api_integration.py  test_batch_integration.py  test_embeddings_integration.py  test_hidden_states_api.py  test_keepalive.py  test_logprobs.py  test_ollama_integration.py  test_queue_integration.py  test_stt_integration.py
tests/unit/: _fake_chunk.py  _fake_request.py  _mock_provider.py  test_abort.py  test_admin_auth.py  test_api_key_auth.py  test_base_provider.py  test_batch_vision_pipeline.py  test_config.py  test_config_api.py  test_conversation_api.py  test_db_blocks.py  test_diagnostic_logger.py  test_draft_tuner.py  test_embedding_gemma.py  test_embedding_model.py  test_embedding_provider.py  test_finish_reason.py  test_generation_core.py  test_generation_gate.py  test_headline_metrics.py  test_hidden_states.py  test_idle_unload.py  test_import_reimport.py  test_jspace.py  (+49 more)
(+403 files in other folders)
