[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heylookitsanllm"
version = "1.19.0"
description = "On-Device Multimodal LLM API server for local LLM models, using MLX"
authors = [{ name = "Fred Bliss" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

# -------------------------------------------------------------------
# Core runtime deps – array of PEP 508 strings (required by spec)
# -------------------------------------------------------------------
dependencies = [
    "mlx",
    "mlx-lm",
    "transformers",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.1",
    "tomli-w>=1.0.0",
    "questionary>=2.0.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.1",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",  # System metrics (RAM, CPU)
    "mlx-vlm>=0.3.11",
    "orjson>=3.9.15",  # Fast JSON serialization
]

# ─── Optional groups ────────────────────────────────────────────────────────
[project.optional-dependencies]
test = ["pytest>=8", "pytest-mock>=3"]
performance = [
    "xxhash>=3.4.1",       # Fast hashing for caching
    "PyTurboJPEG>=1.7.5",  # Fast JPEG encoding/decoding
    "uvloop>=0.19.0",      # Fast async event loop
    "cachetools>=5.3.2",   # Advanced caching with thread safety
]
analytics = [
    "duckdb>=1.0.0",       # Analytics database
    "datasets>=2.19.1",    # HuggingFace datasets (data loader)
]
profile = [
    "py-spy>=0.3.14",          # Sampling profiler
]
scripts = [
    "rich>=13.0.0",        # Used by scripts/metrics_dashboard.py
]
gguf = [
    # Phase Next: llama-server provider
    # "llama-cpp-python>=0.2.0",
]
stt = [
    "parakeet-mlx",             # MLX-based speech-to-text (Parakeet TDT)
    "soundfile>=0.12.1",        # Audio file I/O
]
all = ["heylookitsanllm[performance,analytics,stt,profile]"]

[project.scripts]
heylookllm = "heylook_llm.server:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"heylook_llm.templates" = ["*.jinja2", "*.tpl", "*.yaml"]

[tool.uv.sources]
mlx-lm = { git = "https://github.com/ml-explore/mlx-lm.git" }
mlx-vlm = { git = "https://github.com/Blaizzy/mlx-vlm.git" }
parakeet-mlx = { git = "https://github.com/senstella/parakeet-mlx.git" }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

# ─── Pytest configuration ──────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires server or model)",
    "mlx_perf: MLX performance optimization tests (requires MLX and model)",
    "slow: Slow tests (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
