[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heylookitsanllm"
dynamic = ["version"]
description = "On-Device Multimodal LLM API server for local LLM models, using MLX"
authors = [{ name = "Fred Bliss" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 4 - Beta",
]

# -------------------------------------------------------------------
# Core runtime deps – array of PEP 508 strings (required by spec)
# -------------------------------------------------------------------
dependencies = [
    "mlx>=0.22.0; sys_platform == 'darwin'",
    "mlx-lm>=0.21.0; sys_platform == 'darwin'",
    "mlx-vlm>=0.3.11; sys_platform == 'darwin'",
    "transformers>=5.3.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.1",
    "tomli-w>=1.0.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.1",
    "psutil>=5.9.0",  # System metrics (RAM, CPU)
    "orjson>=3.9.15",  # Fast JSON serialization
]

# ─── Optional groups ────────────────────────────────────────────────────────
[project.optional-dependencies]
test = ["pytest>=8", "pytest-mock>=3", "httpx>=0.27"]
performance = [
    "xxhash>=3.4.1",       # Fast hashing for caching
    "PyTurboJPEG>=1.7.5",  # Fast JPEG encoding/decoding
    "uvloop>=0.19.0",      # Fast async event loop
    "cachetools>=5.3.2",   # Advanced caching with thread safety
]
analytics = [
    "duckdb>=1.0.0",       # Analytics database
    "datasets>=2.19.1",    # HuggingFace datasets (data loader)
]
profile = [
    "py-spy>=0.3.14",          # Sampling profiler
]
cli = [
    "questionary>=2.0.0",  # Interactive TUI for config_tui.py and model_importer.py
]
scripts = [
    "rich>=13.0.0",        # Used by scripts/metrics_dashboard.py
]
all = ["heylookitsanllm[performance,analytics,profile,cli]"]

[project.urls]
Homepage = "https://github.com/fblissjr/heylookitsanllm"
Repository = "https://github.com/fblissjr/heylookitsanllm"
Issues = "https://github.com/fblissjr/heylookitsanllm/issues"

[project.scripts]
heylookllm = "heylook_llm.server:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"heylook_llm.data.profiles" = ["*.toml"]
"heylook_llm.data.services" = ["*.template"]

[tool.setuptools.dynamic]
version = {attr = "heylook_llm.__version__"}

[tool.uv]
# Force latest transformers regardless of what mlx-lm/mlx-vlm pin.
# transformers 5.x has a bug in video_processing_auto.py (NoneType when
# torchvision is absent) -- patched in mlx_provider.py.
override-dependencies = ["transformers>=5.3.0"]

[tool.uv.sources]
mlx-lm = { git = "https://github.com/ml-explore/mlx-lm.git" }
mlx-vlm = { git = "https://github.com/Blaizzy/mlx-vlm.git" }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "build>=1.0.0",
    "twine>=6.0.0",
]

# ─── Pytest configuration ──────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external dependencies)",
    "contract: Contract tests (TestClient, no running server)",
    "integration: Integration tests (requires server or model)",
    "mlx_perf: MLX performance optimization tests (requires MLX and model)",
    "slow: Slow tests (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
