[project]
name = "batch-labeler"
version = "0.1.0"
description = "Standalone client for batch VLM image labeling via OpenAI-compatible API"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "orjson>=3.10",
    "rich>=13.0",
]

[project.scripts]
batch-labeler = "batch_labeler.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/batch_labeler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
