[project]
name = "optloop-lib"
version = "0.1.0"
description = "Autonomous optimization of mlx-lm and mlx-vlm library internals"
requires-python = ">=3.12"
dependencies = [
    "mlx",
    "mlx-lm",
    "mlx-vlm",
    "transformers",
    "orjson",
    "Pillow",
    "numpy",
    "huggingface-hub",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.uv.sources]
mlx-lm = { path = "repos/mlx-lm", editable = true }
mlx-vlm = { path = "repos/mlx-vlm", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
